Revision history for DBIx::Class

        - DBIx::Class::InflateColumn::File entered deprecated state
        - Fix regression where SQL files with comments were not
          handled properly by ::Schema::Versioned.
        - Fix regression on not properly throwing when $obj->relationship
          is unresolvable
        - Add has_relationship method to row objects
        - Fix regression in set_column on PK-less objects
        - Add POD about the significance of PK columns
        - Fix for SQLite to ignore the (unsupported) { for => ... }
          attribute
        - Fix ambiguity in default directory handling of create_ddl_dir
          (RT#54063)

0.08120 2010-02-24 08:58:00 (UTC)
        - Make sure possibly overwritten deployment_statements methods in
          schemas get called on $schema->deploy
        - Fix count() with group_by aliased-function resultsets
        - with_deferred_fk_checks() Oracle support
        - Massive refactor and cleanup of primary key handling
        - Fixed regression losing custom result_class (really this time)
          (RT#54697)
        - Fixed regression in DBIC SQLT::Parser failing with a classname
          (as opposed to a schema object)
        - Changes to Storage::DBI::Oracle to accomodate changes in latest
          SQL::Translator (quote handling)
        - Make sure deployment_statements is per-storage overridable
        - Fix dbicadmin's (lack of) POD

0.08119 2010-02-15 09:36:00 (UTC)
        - Add $rs->is_ordered to test for existing order_by on a resultset
        - Add as_subselect_rs to DBIC::ResultSet from
          DBIC::Helper::ResultSet::VirtualView::as_virtual_view
        - Refactor dbicadmin adding DDL manipulation capabilities
        - New optional dependency manager to aid extension writers
        - Depend on newest bugfixed Moose
        - Make resultset chaining consistent wrt selection specification
        - Storage::DBI::Replicated cleanup